--- a/Test/WebApp/src/main/webapp/index.html
+++ b/Test/WebApp/src/main/webapp/index.html
@@ -4,27 +4,7 @@
 <meta charset="UTF-8">
 <title>Sample Webpage</title>
 <style>
-.btn 
-{
-	display: block;
-	width: 15%;
-	border: none;
-	background-color: #FF9933;
-	color: white;
-	padding: 14px 28px;
-	font-siz: 20px;
-	cursor: pointer;
-	text-align: center;
-	margin-left: 50px;
-}
-
-.btn:hoverr
-{
-	background-color: #FF6600;
-	color: white;
-}
-
-.btn1
+.btn
 {
 	display: block;
 	width: 15%;
@@ -38,7 +18,7 @@
 	margin-left: 50px;
 }
 
-.btn1:hover
+.btn:hover
 {
 	background-color: #FF6600;
 	color: white;
@@ -50,11 +30,12 @@
 	<h1>ICICI Bank</h1>
 		<button type = "button" class="btn">Home</button>
 		<br>
-		<button type = "button" class="btn1">Sign Up</button>
+		<button type = "button" class="btn">Sign Up</button>
 		<br>
-		<button type = "button" class="btn1">Login</button>
+		<button type = "button" class="btn">Login</button>
 		<br>
-		<button type = "button" class="btn1">About</button>
+		<button type = "button" class="btn">About</button>
 	</form>
 </body>
 </html>
+
